[package]
name = "re"
version = "0.2.1"
description = "Network utility toolkit. re{layed,flected,directed,transmitted,vealed}"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
futures = "0.3"
headers = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "tcp", "stream"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
log = "0.4"
memmap2 = "0.5"
ring = "0.16"
sha2 = "0.10"
tempfile = "3.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
