[package]
name = "re"
version = "0.4.4"
description = "Network utility toolkit. re{layed,flected,directed,transmitted,vealed}"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
futures = "0.3"
headers = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "server", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "logging", "ring"] }
hyper-util = { version = "0.1", features = ["client", "server-auto"] }
log = "0.4"
memmap2 = "0.9"
ring = "0.17"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
